<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   android:paddingStart="16dp"
    android:background="@drawable/item_border_style"
    >
<TextView
    android:id="@+id/tv_first_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/name_1"
    android:textSize="32sp"
    android:layout_marginTop="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />

<TextView
    android:id="@+id/tv_second_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/name_2"
    android:textSize="32sp"
    android:layout_marginTop="20dp"
    app:layout_constraintTop_toBottomOf="@id/tv_first_name"
    app:layout_constraintStart_toStartOf="@id/tv_first_name"

    />

    <TextView
        android:id="@+id/tv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage"
        android:textSize="32sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_first_name"
        app:layout_constraintEnd_toEndOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>